# voice-test

./: .gitignore  README.md  audio_recorder.py  langsmith_processor.py  pipecat_langsmith.py  pyproject.toml  requirements.txt
livekit/: livekitagents_langsmith.py
livekit-test/: langsmith_processor.py
pipecat/: langsmith_processor.py
pipecat-test/: audio_recorder.py  langsmith_processor.py  pipecat_langsmith.py  turn_audio_recorder.py
